--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,7 @@
 body{
     font-family: 'quicksand', 'sans-serif', 'work-sans';
     /* margin: 0 140px; */
+    position: relative;
 }
 
 
@@ -202,33 +203,86 @@ li{
 
 
 /* css of our story section starts*/
-.our-stories{
+.our-story{
     display: flex;
     flex-direction: column;
     gap: 80px;
     padding: 60px 140px;
     justify-content: center;
     align-items: center;
+    position: relative;
+    z-index: 1;
     background: url("../assets/bg.png"),linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);
 }
-.all-story{
+.our-story .story-title{
+    font-size: 46px;
+    font-weight: 700;
+}
+.stories{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
 }
-.story-grp{
+.story-cart{
+    background-color: white;
+    position: relative;
+    border-radius: 16px;
+}
+#story-1 .story-txt{
+    padding: 60px 40px 40px 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+#story-1 >p{
+    border-radius: 47.93px;
+    background: rgb(60, 216, 232);
+    position: absolute;
+    padding:15px 20px;
+    left: 40px;
+    top: 48.5%;
+    transform: translateY(50%);
+    color: white;
+    font-weight: 500;
+}
+.story-cart img{
+    border-radius: 16px 16px 0 0;
+    width: 100%;
+}
+.story-txt >p{
+    color: rgb(102, 102, 102);
+    font-size: 16px;
+    font-weight: 500;
+}
+/* grp story css */
+.grp-cart{
     display: grid;
     grid-template-columns: 2fr 2fr;
     gap: 20px;
 }
 
-.story .img img{
-    width: 290px;
+.grp-cart .story-cart >p{
+    font-size: 16px;
+    font-weight: 500;
+    padding: 10px 15px;
+    background-color: rgb(149, 178, 38);
+    position: absolute;
+    padding:15px 20px;
+    left: 40px;
+    top: 41.5%;
+    transform: translateY(50%);
+    color: white;
+    border-radius: 48px;
+}
+.grp-cart .story-cart h1{
+    font-size: 16px;
+    font-weight: 700;
+    color: rgb(0, 0, 0);
+}
+.grp-cart .story-txt{
+    padding: 45px 40px;
 }
 
-.story .big-img img{
-    width: 540px;
-}
 /* css of our story section ends*/
 
 
@@ -237,6 +291,9 @@ li{
 @media screen and (max-width: 500px) {
     body{
         margin: 0;
+    }
+    .btn{
+        font-size: 16px;
     }
     .navbar{
         margin: 0;
@@ -279,10 +336,11 @@ li{
 
     /* cart section */
     .cart{
-        padding: 40px 0;
+        padding: 0 16px;
         flex-direction: column;
         gap: 20px;
         padding-bottom: 20px;
+        background-size: contain;
     }
     .cart-title{
         font-size: 26px;
@@ -290,7 +348,7 @@ li{
     }
     .carts{
         flex-direction: column;
-        padding: 0 16px;
+        width: 100%;
     }
     .subtitle{
         font-size: 18px;
@@ -304,4 +362,35 @@ li{
     .side-btn{     
         display: none;
     }
+
+    /* css for our story section */
+    .our-story{
+        gap: 20px;
+        padding: 0 16px;
+        align-items: center;
+        justify-content: center;
+    }
+    .stories{
+        display: flex;
+    }
+    .big-cart{
+        position: absolute;
+        display: none;
+    }
+    .our-story > .story-title{
+        font-size: 26px;
+        font-weight: 700;
+    }
+    .grp-cart .story-cart >p{
+        font-size: 10px;
+        font-weight: 500;
+        padding: 5px 10px;
+    }
+    .story-cart .story-txt{
+        padding: 25px 20px;
+    }
+    .story-cart .story-txt h1{
+        font-size: 10px;
+    }
+
 }
