--- a/style/style.css
+++ b/style/style.css
@@ -284,8 +284,72 @@ li{
 }
 
 /* css of our story section ends*/
+/* css for marquee tag */
+.marq-line{
+    height:50px ;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+/* css of footer section starts here */
+.footer{
+    padding: 120px 140px 170px 140px;
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    justify-content: space-between;
+    text-align: left;
+    background: rgb(1, 172, 253);
+    gap: 140px;
+    color: white;
+}
+.footer-left{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+    gap: 35px;
+}
+.footer-left > h1{
+    font-size: 42px;
+    font-weight: 700;
+}
+.footer-left  img{
+    filter: brightness(1) contrast(1.3);
+}
+.footer-left > p{
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    font-weight: 400;
+}
+.footer-middle{
+    display: flex;
+    flex-direction: column;
+}
+.footer-title{
+    font-size: 26px;
+    font-weight: 700;
+    margin-bottom: 32px;
+}
+.footer-midle ul li a{
+    color: white;
+}
+.footer-midle ul li{
+    margin-bottom: 20px;
+}
+.icons img{
+    margin-right: 10px;
+}
 
 
+/* css of footer section ends here */
+/* ================================== */
+
+
+/* =============================== */
 /* css for mobile responsive */
 /* ============================== */
 @media screen and (max-width: 500px) {
@@ -366,7 +430,7 @@ li{
     /* css for our story section */
     .our-story{
         gap: 20px;
-        padding: 0 16px;
+        padding: 40px 16px;
         align-items: center;
         justify-content: center;
     }
@@ -393,4 +457,24 @@ li{
         font-size: 10px;
     }
 
+
+    /* footer */
+    .footer{
+        padding: 60px 20px;
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        background: rgb(1, 172, 253);
+        gap: 32px;
+        color: white;
+    }
+    #footer-logo{
+        display: block;
+        font-size: 35px;
+    }
+    .marq-line{
+        height:40px ;
+        font-size: 20px;
+        font-weight: 500;
+    }
 }
